@@ -13,6 +13,7 @@ version = "0.5.0-nightly"
 anyhow = "1.0"
 async-trait = "0.1"
 byteorder = "1.4"
+dirs = "3.0"
 env_logger = "0.9"
 flate2 = "1.0"
 futures-util = "0.3"
@@ -25,6 +26,7 @@ kubelet = { git = "https://github.com/stackabletech/krustlet.git", branch = "sta
 Inflector = "0.11"
 lazy_static = "1.4"
 log = "0.4"
+multimap = "0.8"
 nix = "0.22"
 oci-distribution = { git = "https://github.com/stackabletech/krustlet.git", branch = "stackable_patches_v0.7.0" } # version = "0.6"
 regex = "1.4"
